--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1266,6 +1266,69 @@ section.lazy-placeholder:after {
 .cid-slguUXhmdy UL {
   color: #ffffff;
 }
+.cid-snbP0ECIbT {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-snbP0ECIbT .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-snbP0ECIbT .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-snbP0ECIbT .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-snbP0ECIbT .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-snbP0ECIbT .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-snbP0ECIbT .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-snbP0ECIbT .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-snbP0ECIbT .price-figure {
+  font-weight: 700;
+  color: #55b4d4;
+}
+.cid-snbP0ECIbT .price-value {
+  font-weight: 700;
+  vertical-align: top;
+  color: #ffffff;
+}
+@media (max-width: 550px) {
+  .cid-snbP0ECIbT .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-snbP0ECIbT .plan-title {
+  color: #55b4d4;
+}
+.cid-snbP0ECIbT UL {
+  color: #ffffff;
+}
 .cid-slfYvNc919 {
   padding-top: 45px;
   padding-bottom: 45px;
