Small text update on Index and Terraria pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1203,6 +1203,9 @@ section.lazy-placeholder:after {
 .cid-smXoNMzrSL P {
   color: #767676;
 }
+.cid-smXoNMzrSL H1 {
+  color: #ffffff;
+}
 .cid-slguUXhmdy {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1331,7 +1334,7 @@ section.lazy-placeholder:after {
 }
 .cid-slfYvNc919 {
   padding-top: 45px;
-  padding-bottom: 45px;
+  padding-bottom: 120px;
   background-color: #232323;
 }
 .cid-slfYvNc919 .line {
