Added Java and Bedrock to Minecraft Hosting Page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1772,6 +1772,9 @@ section.lazy-placeholder:after {
   padding-bottom: 75px;
   background-image: url("../../../assets/images/minecraft-2053882-1280-1280x678.jpg");
 }
+.cid-slfHg385Iq H3 {
+  color: #f9f295;
+}
 .cid-slfvJkyRpX {
   padding-top: 0px;
   padding-bottom: 0px;
