--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2962,7 +2962,7 @@ section.lazy-placeholder:after {
   color: #ff7f9f;
 }
 .cid-slgfrTSRyJ H1 {
-  color: #ffffff;
+  color: #f9f295;
 }
 .cid-slgfrUj01t {
   padding-top: 0px;
@@ -3009,8 +3009,8 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-slgfrWxVAH {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-color: #232323;
 }
 .cid-slgfrWxVAH .line {
@@ -4524,7 +4524,7 @@ section.lazy-placeholder:after {
   background: transparent !important;
 }
 .cid-sljUYY6pNq .image_wrapper {
-  height: 590px;
+  height: 600px;
   width: 100%;
   position: relative;
   display: inline-block;
