Small server description update

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1094,17 +1094,17 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-sldAdSatUN {
-  background-image: url("../../../assets/images/ctb3kvk-2000x1116.jpg");
+  background-image: url("../../../assets/images/10688437793-14c976aeea-o-1366x768.png");
 }
 .cid-sldAdSatUN H3 {
   color: #f9f295;
 }
 .cid-sldAdSatUN H1 {
-  color: #f9f295;
+  color: #ffffff;
 }
 .cid-sldAdSatUN .mbr-text,
 .cid-sldAdSatUN .mbr-section-btn {
-  color: #ffffff;
+  color: #d2ff24;
 }
 .cid-slfYvJ5L6a {
   padding-top: 90px;
@@ -9256,7 +9256,7 @@ section.lazy-placeholder:after {
   color: #cccccc;
 }
 .cid-sn7YUvVEeh {
-  padding-top: 0px;
+  padding-top: 120px;
   padding-bottom: 120px;
   background-color: #232323;
 }
