--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10267,6 +10267,72 @@ section.lazy-placeholder:after {
 .cid-smXqYNbeFS P {
   color: #767676;
 }
+.cid-sr3kzzFin1 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sr3kzzFin1 .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-sr3kzzFin1 .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-sr3kzzFin1 .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-sr3kzzFin1 .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-sr3kzzFin1 .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-sr3kzzFin1 .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-sr3kzzFin1 .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-sr3kzzFin1 .price-figure {
+  font-weight: 700;
+  color: #55b4d4;
+}
+.cid-sr3kzzFin1 .price-value {
+  font-weight: 700;
+  vertical-align: top;
+  color: #d2ff24;
+}
+@media (max-width: 550px) {
+  .cid-sr3kzzFin1 .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-sr3kzzFin1 .plan-title {
+  color: #ffffff;
+}
+.cid-sr3kzzFin1 UL {
+  color: #ffffff;
+}
+.cid-sr3kzzFin1 SPAN {
+  color: #d2ff24;
+}
 .cid-sm75hVKIOf {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -10312,7 +10378,7 @@ section.lazy-placeholder:after {
 }
 .cid-sm75hVKIOf .price-figure {
   font-weight: 700;
-  color: #55b4d4;
+  color: #d2ff24;
 }
 .cid-sm75hVKIOf .price-value {
   font-weight: 700;
