--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1323,6 +1323,9 @@ section.lazy-placeholder:after {
 .cid-sqUAkoxhHQ .mbr-overlay ~ .container-slide {
   z-index: auto;
 }
+.cid-sqUAkoxhHQ H2 {
+  text-align: left;
+}
 .cid-sqdiFAFmX0 {
   padding-top: 30px;
   padding-bottom: 0px;
@@ -12568,7 +12571,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-srlGHwuJoA {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -12578,54 +12581,27 @@ section.lazy-placeholder:after {
 .cid-srlGHwuJoA H2 {
   color: #ffffff;
 }
-.cid-srlF0Q5MnG {
+.cid-srm6y7fk0F {
   padding-top: 0px;
   padding-bottom: 0px;
   background-color: #232323;
 }
-.cid-srlF0Q5MnG h4 {
-  text-align: left;
-  font-weight: 500;
-}
-.cid-srlF0Q5MnG p {
-  color: #767676;
-  text-align: left;
-  margin-bottom: 0;
-}
-.cid-srlF0Q5MnG .card-img {
-  text-align: left;
-  -webkit-flex: 1 0 auto;
-  flex: 1 0 auto;
-  width: auto;
-}
-.cid-srlF0Q5MnG .card-img span {
-  font-size: 72px;
-  color: #ff3366;
-}
-.cid-srlF0Q5MnG .card-box {
-  padding-left: 1rem;
-  word-break: break-word;
-  width: 100%;
-}
-@media (max-width: 991px) {
-  .cid-srlF0Q5MnG .card-img {
-    text-align: left;
-    padding-bottom: 0.75rem;
-  }
-  .cid-srlF0Q5MnG .card-box {
-    padding-left: 0;
-  }
-}
-.cid-srlF0Q5MnG .card-title,
-.cid-srlF0Q5MnG .card-img {
+.cid-srm6y7fk0F .mbr-text {
   color: #ffffff;
 }
-.cid-srlF0Q5MnG P {
-  color: #ffffff;
+.cid-srm6y7fk0F h4 {
+  text-align: center;
 }
-.cid-srlF0Q5MnG .card-title,
-.cid-srlF0Q5MnG .card-img DIV {
-  text-align: left;
+.cid-srm6y7fk0F p {
+  text-align: center;
+}
+.cid-srm6y7fk0F .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
+.cid-srm6y7fk0F .card-title,
+.cid-srm6y7fk0F .card-img {
+  color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
   padding-top: 30px;
