--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1327,7 +1327,7 @@ section.lazy-placeholder:after {
   text-align: center;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -2118,7 +2118,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -2411,7 +2411,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -3564,7 +3564,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -4180,7 +4180,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -4669,7 +4669,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -5233,7 +5233,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -5998,7 +5998,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -6749,7 +6749,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -7429,7 +7429,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -7922,7 +7922,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -8675,7 +8675,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -9355,7 +9355,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -10089,7 +10089,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -10886,7 +10886,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -11384,7 +11384,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -11912,7 +11912,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -12604,7 +12604,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -12680,6 +12680,29 @@ section.lazy-placeholder:after {
 }
 .cid-sqdiFAFmX0 .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-srnbc6NzSm {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srnbc6NzSm .line {
+  background-color: #232323;
+  color: #232323;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-srnbc6NzSm .section-text {
+  padding: 2rem 0;
+}
+.cid-srnbc6NzSm .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-srnbc6NzSm .inner-container {
+    width: 100% !important;
+  }
 }
 .cid-srn5ec2gyH {
   padding-top: 120px;
@@ -13121,7 +13144,7 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-sqdiFAFmX0 {
-  padding-top: 30px;
+  padding-top: 120px;
   padding-bottom: 0px;
   background-color: #232323;
 }
