Added CS:GO hosting and page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -15957,3 +15957,760 @@ section.lazy-placeholder:after {
 .cid-srE0nUSOga .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-srPUI70WrD {
+  background-image: url("../../../assets/images/csgo-mirage-latest-version-1920x1080.jpg");
+}
+.cid-srPUI70WrD H1 {
+  text-align: center;
+  color: #f9f295;
+}
+.cid-srPWCJGmXE {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srPWCJGmXE .title {
+  padding-bottom: 2.5rem;
+}
+.cid-srPWCJGmXE .mbr-text {
+  color: #efefef;
+  margin: 0;
+  padding-top: 0.5rem;
+}
+.cid-srPWCJGmXE .wrapper {
+  display: flex;
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-srPWCJGmXE .wrapper .iconfont-wrapper {
+    margin: auto;
+  }
+}
+@media (max-width: 991px) {
+  .cid-srPWCJGmXE .wrapper {
+    flex-wrap: wrap;
+  }
+  .cid-srPWCJGmXE .wrapper .iconfont-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-srPWCJGmXE .wrapper .b-info {
+  width: 100%;
+}
+.cid-srPWCJGmXE H6 {
+  color: #f9f295;
+}
+.cid-srPWCJGmXE H4 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-srPWCJGmXE .mbr-section-subtitle {
+  color: #55b4d4;
+  text-align: center;
+}
+.cid-srPXUpQv0A {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srPXUpQv0A .title {
+  padding-bottom: 2.5rem;
+}
+.cid-srPXUpQv0A .mbr-text {
+  color: #efefef;
+  margin: 0;
+  padding-top: 0.5rem;
+}
+.cid-srPXUpQv0A .wrapper {
+  display: flex;
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-srPXUpQv0A .wrapper .iconfont-wrapper {
+    margin: auto;
+  }
+}
+@media (max-width: 991px) {
+  .cid-srPXUpQv0A .wrapper {
+    flex-wrap: wrap;
+  }
+  .cid-srPXUpQv0A .wrapper .iconfont-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-srPXUpQv0A .wrapper .b-info {
+  width: 100%;
+}
+.cid-srPXUpQv0A H6 {
+  color: #f9f295;
+}
+.cid-srPXUpQv0A H4 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-srPXUpQv0A .mbr-section-subtitle {
+  color: #55b4d4;
+  text-align: center;
+}
+.cid-srPX24qENA {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srPX24qENA .title {
+  padding-bottom: 2.5rem;
+}
+.cid-srPX24qENA .mbr-text {
+  color: #efefef;
+  margin: 0;
+  padding-top: 0.5rem;
+}
+.cid-srPX24qENA .wrapper {
+  display: flex;
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-srPX24qENA .wrapper .iconfont-wrapper {
+    margin: auto;
+  }
+}
+@media (max-width: 991px) {
+  .cid-srPX24qENA .wrapper {
+    flex-wrap: wrap;
+  }
+  .cid-srPX24qENA .wrapper .iconfont-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-srPX24qENA .wrapper .b-info {
+  width: 100%;
+}
+.cid-srPX24qENA H6 {
+  color: #f9f295;
+}
+.cid-srPX24qENA H4 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-srPX24qENA .mbr-section-subtitle {
+  color: #55b4d4;
+  text-align: center;
+}
+.cid-srPVAbGqcD {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srPVAbGqcD h3 {
+  text-align: center;
+}
+.cid-srPVAbGqcD .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-srPVAbGqcD .mbr-content-text {
+  color: #767676;
+}
+.cid-srPVAbGqcD .panel-item {
+  background: #232323;
+}
+.cid-srPVAbGqcD .card {
+  word-wrap: break-word;
+}
+.cid-srPVAbGqcD .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-srPVAbGqcD H3 {
+  color: #ffffff;
+}
+.cid-srPVAbGqcD .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sllozbbeje .navbar {
+  padding: .5rem 0;
+  background: #181818;
+  transition: none;
+  min-height: 77px;
+}
+.cid-sllozbbeje .navbar-dropdown.bg-color.transparent.opened {
+  background: #181818;
+}
+.cid-sllozbbeje a {
+  font-style: normal;
+}
+.cid-sllozbbeje .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-sllozbbeje .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-sllozbbeje .nav-item:focus,
+.cid-sllozbbeje .nav-link:focus {
+  outline: none;
+}
+.cid-sllozbbeje .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-sllozbbeje .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-sllozbbeje .menu-logo {
+  margin-right: auto;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-sllozbbeje .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-sllozbbeje .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-sllozbbeje .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-sllozbbeje .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-sllozbbeje .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-sllozbbeje .dropdown .dropdown-menu {
+  background: #181818;
+  visibility: hidden;
+  display: block;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-sllozbbeje .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-sllozbbeje .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-sllozbbeje .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-sllozbbeje .dropdown.open > .dropdown-menu {
+  visibility: visible;
+}
+.cid-sllozbbeje .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-sllozbbeje .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-sllozbbeje .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-sllozbbeje .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-sllozbbeje .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-sllozbbeje .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-sllozbbeje .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-sllozbbeje button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-sllozbbeje button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-sllozbbeje button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-sllozbbeje button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-sllozbbeje button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sllozbbeje button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-sllozbbeje button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-sllozbbeje nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sllozbbeje nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-sllozbbeje nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-sllozbbeje nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-sllozbbeje .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sllozbbeje .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse.collapsing,
+.cid-sllozbbeje .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-sllozbbeje .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-sllozbbeje .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-sllozbbeje .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-sllozbbeje .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-sllozbbeje .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-sllozbbeje .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-sllozbbeje .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.3rem);
+  }
+}
+.cid-sllozbbeje .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-sllozbbeje .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-sllozbbeje .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-sllozbbeje .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-sllozbbeje .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-sllozbbeje .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-sllozbbeje .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-sllozbbeje .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sllozbbeje img {
+    height: 3.8rem !important;
+  }
+  .cid-sllozbbeje .btn {
+    display: -webkit-flex;
+  }
+  .cid-sllozbbeje button.navbar-toggler {
+    display: block;
+  }
+  .cid-sllozbbeje .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-sllozbbeje .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-sllozbbeje .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-sllozbbeje .navbar-collapse.collapsing,
+  .cid-sllozbbeje .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-sllozbbeje .navbar-collapse.collapsing .navbar-nav,
+  .cid-sllozbbeje .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-sllozbbeje .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-sllozbbeje .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-sllozbbeje .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-sllozbbeje .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-sllozbbeje .navbar-collapse.collapsing .navbar-buttons,
+  .cid-sllozbbeje .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-sllozbbeje .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-sllozbbeje .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-sllozbbeje .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-sllozbbeje .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-sllozbbeje .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-sllozbbeje .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-sllozbbeje .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-sllozbbeje .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-sllozbbeje .nav-link:hover,
+.cid-sllozbbeje .dropdown-item:hover {
+  color: #d2ff24 !important;
+}
+.cid-srPVZCeJGR {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-srPVZCeJGR .card {
+  align-self: stretch;
+}
+.cid-srPVZCeJGR .card-box {
+  height: 100%;
+  background-color: #181818;
+  padding: 2rem;
+}
+.cid-srPVZCeJGR h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-srPVZCeJGR p {
+  color: #767676;
+  text-align: left;
+}
+.cid-srPVZCeJGR .card-wrapper {
+  position: relative;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-srPVZCeJGR .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-srPVZCeJGR .card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+.cid-srPVZCeJGR P {
+  color: #ffffff;
+}
+.cid-srPVZCeJGR .card-title {
+  color: #ffffff;
+}
+.cid-srPW0xXWDL {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #232323;
+}
+.cid-srPW0xXWDL img,
+.cid-srPW0xXWDL .item-img {
+  width: 100%;
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-srPW0xXWDL .item:focus,
+.cid-srPW0xXWDL span:focus {
+  outline: none;
+}
+.cid-srPW0xXWDL .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-srPW0xXWDL .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #232323;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-srPW0xXWDL .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-srPW0xXWDL .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-srPW0xXWDL .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-srPW0xXWDL .mbr-section-title {
+  color: #ffffff;
+}
+.cid-srPW0xXWDL .mbr-text,
+.cid-srPW0xXWDL .mbr-section-btn {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-srPW0xXWDL .item-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-srPW0xXWDL .item-subtitle {
+  text-align: left;
+  color: #bbbbbb;
+}
+.cid-sqdiFAFmX0 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sqdiFAFmX0 .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-sqdiFAFmX0 .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-sqdiFAFmX0 .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-sqdiFAFmX0 .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-sqdiFAFmX0 .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-sqdiFAFmX0 .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-sqdiFAFmX0 .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-sqdiFAFmX0 .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-sqdiFAFmX0 .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-sqdiFAFmX0 .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-sqdiFAFmX0 .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sqdiFAFmX0 .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-sqdiFAFmX0 .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-sqdiFAFmX0 .media-container-row .row-copirayt p {
+  width: 100%;
+}
