Added stock status

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2198,6 +2198,17 @@ section.lazy-placeholder:after {
 .cid-slfHg385Iq H3 {
   color: #f9f295;
 }
+.cid-ssA2x6CIht {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-ssA2x6CIht P {
+  color: #767676;
+}
+.cid-ssA2x6CIht H1 {
+  color: #ff7f9f;
+}
 .cid-slfvJkyRpX {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -11048,6 +11059,17 @@ section.lazy-placeholder:after {
 .cid-sm73WCyW2D H1 {
   color: #ffffff;
 }
+.cid-ssA3pS4TYC {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-ssA3pS4TYC P {
+  color: #767676;
+}
+.cid-ssA3pS4TYC H1 {
+  color: #ff7f9f;
+}
 .cid-sm73WCPUuH {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -13409,6 +13431,17 @@ section.lazy-placeholder:after {
 .cid-spPQg4bJS7 .mbr-text,
 .cid-spPQg4bJS7 .mbr-section-btn {
   color: #f7ed4a;
+}
+.cid-ssA3vOALsZ {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-ssA3vOALsZ P {
+  color: #767676;
+}
+.cid-ssA3vOALsZ H1 {
+  color: #ff7f9f;
 }
 .cid-spPRtVQl19 {
   padding-top: 0px;
@@ -15963,6 +15996,17 @@ section.lazy-placeholder:after {
 .cid-srPUI70WrD H1 {
   text-align: center;
   color: #f9f295;
+}
+.cid-ssA3mpzn8b {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-ssA3mpzn8b P {
+  color: #767676;
+}
+.cid-ssA3mpzn8b H1 {
+  color: #ff7f9f;
 }
 .cid-srPWCJGmXE {
   padding-top: 0px;
