--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1412,6 +1412,17 @@ section.lazy-placeholder:after {
   padding-bottom: 75px;
   background-image: url("../../../assets/images/48831174492-62e699913d-o-1296x816.png");
 }
+.cid-ssTe68fIsR {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-ssTe68fIsR P {
+  color: #767676;
+}
+.cid-ssTe68fIsR H1 {
+  color: #ff7f9f;
+}
 .cid-slfYvJLtrx {
   padding-top: 0px;
   padding-bottom: 0px;
