--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Alfa+Slab+One:400&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap);
 
 
 
@@ -17,7 +17,7 @@ body {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Alfa Slab One', display;
+  font-family: 'Quicksand', sans-serif;
   font-size: 3rem;
   font-display: swap;
 }
@@ -1266,6 +1266,123 @@ section.lazy-placeholder:after {
 }
 .cid-sqUAkoxhHQ P {
   text-align: left;
+}
+.cid-suR8B8WSYX {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-suR8B8WSYX P {
+  color: #767676;
+}
+.cid-suR8B8WSYX H1 {
+  color: #ffffff;
+}
+.cid-suR0MjylqL {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-suR0MjylqL .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-suR0MjylqL .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-suR0MjylqL .mbr-text {
+  color: #f9f295;
+  text-align: center;
+}
+.cid-suR0MjylqL .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-suR0MjylqL .mbr-author-name {
+  color: #d2ff24;
+}
+.cid-suR0MjylqL .mbr-testimonial .panel-item {
+  background-color: #232323;
+}
+.cid-suR0MjylqL .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-suR0MjylqL .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-suR0MjylqL .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-suR0MjylqL .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-suR0MjylqL .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+.cid-suR0MjylqL H2 {
+  color: #ffffff;
+}
+.cid-suRWkSA8oZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-suRWkSA8oZ .mbr-section-subtitle {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-suRWkSA8oZ .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-suRWkSA8oZ .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-suRWkSA8oZ .team-item .item-image img {
+  width: 100%;
+}
+.cid-suRWkSA8oZ .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-suRWkSA8oZ .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-suRWkSA8oZ .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-suRWkSA8oZ .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-suRWkSA8oZ H2 {
+  color: #ffffff;
+}
+.cid-suRWkSA8oZ .mbr-section-subtitle DIV {
+  text-align: center;
 }
 .cid-sqdiFAFmX0 {
   padding-top: 30px;
