--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1292,7 +1292,7 @@ section.lazy-placeholder:after {
   flex-wrap: wrap;
 }
 .cid-suR0MjylqL .mbr-text {
-  color: #f9f295;
+  color: #d2ff24;
   text-align: center;
 }
 .cid-suR0MjylqL .mbr-author-desc {
@@ -1340,8 +1340,30 @@ section.lazy-placeholder:after {
 .cid-suR0MjylqL H2 {
   color: #ffffff;
 }
+.cid-suWHy4By5G {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #232323;
+}
+.cid-suWHy4By5G .twitter-wrapper,
+.cid-suWHy4By5G iframe {
+  min-height: 500px;
+  max-height: 500px;
+  border-radius: 4px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 455.7 455.7'%3E%3Crect width='455.7' height='455.7' fill='%2350ABF1'/%3E%3Cpath d='M60.4 337.8c30.3 19.2 66.3 30.4 104.9 30.4 108.3 0 196.2-87.8 196.2-196.2 0-2.7-0.1-5.4-0.2-8.1 3.9-3.1 28.2-22.5 34.1-35 0 0-19.7 8.2-38.9 10.1 0 0-0.1 0-0.1 0 0 0 0 0 0.1-0.1 1.8-1.2 26.6-18.1 30-38.2 0 0-13.9 7.4-33.4 13.9 -3.2 1.1-6.6 2.1-10.1 3.1 -12.6-13.4-30.4-21.8-50.2-21.8 -38 0-68.8 30.8-68.8 68.8 0 5.4 0.6 10.6 1.8 15.6 -5.3-0.2-86.2-4.8-141.3-71.4 0 0-32.9 44.9 19.6 91.1 0 0-16-0.6-29.7-8.9 0 0-5.1 54.4 54.4 68.3 0 0-11.7 4.4-30.4 1.3 0 0 10.4 44 63.3 48.1 0 0-41.8 37.7-101.1 28.9L60.4 337.8z' fill='%23FFF'/%3E%3C/svg%3E");
+}
+.cid-suWHy4By5G a.twitter-timeline {
+  display: none;
+}
+.cid-suWHy4By5G .mbr-section-title {
+  color: #ffffff;
+}
 .cid-suRWkSA8oZ {
-  padding-top: 0px;
+  padding-top: 60px;
   padding-bottom: 0px;
   background-color: #232323;
 }
@@ -12472,7 +12494,7 @@ section.lazy-placeholder:after {
 }
 .cid-slkdyK8ZmR {
   padding-top: 135px;
-  padding-bottom: 135px;
+  padding-bottom: 0px;
   background-color: #232323;
 }
 .cid-slkdyK8ZmR P {
@@ -12484,33 +12506,6 @@ section.lazy-placeholder:after {
 .cid-slkdyK8ZmR .mbr-text,
 .cid-slkdyK8ZmR .mbr-section-btn {
   color: #cccccc;
-}
-.cid-sn7YUvVEeh {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-color: #232323;
-}
-.cid-sn7YUvVEeh .title {
-  margin-bottom: 2rem;
-}
-.cid-sn7YUvVEeh .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-sn7YUvVEeh a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-sn7YUvVEeh a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-sn7YUvVEeh textarea.form-control {
-  min-height: 188px;
-}
-.cid-sn7YUvVEeh H2 {
-  color: #ffffff;
-}
-.cid-sn7YUvVEeh LABEL {
-  color: #ffffff;
 }
 .cid-sllozbbeje .navbar {
   padding: .5rem 0;
@@ -12919,6 +12914,98 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .nav-link:hover,
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
+}
+.cid-suWLzqlkgA {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #232323;
+}
+.cid-suWLzqlkgA h2,
+.cid-suWLzqlkgA h3,
+.cid-suWLzqlkgA h4,
+.cid-suWLzqlkgA p {
+  color: #ffffff;
+}
+.cid-suWLzqlkgA .mbr-overlay {
+  z-index: -1;
+}
+.cid-suWLzqlkgA .mbr-iconfont {
+  font-size: 48px;
+  padding-right: 1rem;
+}
+.cid-suWLzqlkgA .form-control {
+  margin-bottom: 15px;
+  padding: 1.07em 1.07em;
+}
+.cid-suWLzqlkgA .subtext {
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+.cid-suWLzqlkgA .media-container-row {
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-suWLzqlkgA .mbr-text {
+  color: #767676;
+}
+.cid-suWLzqlkgA .form-block {
+  padding: 3rem;
+  position: relative;
+}
+.cid-suWLzqlkgA .form-block .bg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #232323;
+  opacity: 1;
+  z-index: 0;
+}
+.cid-suWLzqlkgA .form-block .form-wrap {
+  position: relative;
+  z-index: 1;
+}
+.cid-suWLzqlkgA a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-suWLzqlkgA .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-suWLzqlkgA .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-suWLzqlkgA textarea.form-control {
+  resize: none;
+}
+@media (min-width: 768px) {
+  .cid-suWLzqlkgA .container > .row > .col-md-6:first-child {
+    padding-right: 30px;
+  }
+  .cid-suWLzqlkgA .container > .row > .col-md-6:last-child {
+    padding-left: 30px;
+  }
+}
+@media (max-width: 991px) {
+  .cid-suWLzqlkgA .google-map {
+    padding-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-suWLzqlkgA h2 {
+    padding-top: 2rem;
+  }
+}
+@media (max-width: 499px) {
+  .cid-suWLzqlkgA .block-content {
+    padding: 0;
+  }
+  .cid-suWLzqlkgA .form-block {
+    padding: 1rem;
+  }
 }
 .cid-sqdiFAFmX0 {
   padding-top: 30px;
