Changed contact form

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1369,7 +1369,7 @@ section.lazy-placeholder:after {
 }
 .cid-suRWkSA8oZ .mbr-section-subtitle {
   color: #ffffff;
-  text-align: left;
+  text-align: center;
 }
 .cid-suRWkSA8oZ .media-row {
   display: -webkit-flex;
@@ -12915,97 +12915,32 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
 }
-.cid-suWLzqlkgA {
+.cid-suXxhASwfl {
   padding-top: 120px;
   padding-bottom: 120px;
   background-color: #232323;
 }
-.cid-suWLzqlkgA h2,
-.cid-suWLzqlkgA h3,
-.cid-suWLzqlkgA h4,
-.cid-suWLzqlkgA p {
-  color: #ffffff;
+.cid-suXxhASwfl .title {
+  margin-bottom: 2rem;
 }
-.cid-suWLzqlkgA .mbr-overlay {
-  z-index: -1;
-}
-.cid-suWLzqlkgA .mbr-iconfont {
-  font-size: 48px;
-  padding-right: 1rem;
-}
-.cid-suWLzqlkgA .form-control {
-  margin-bottom: 15px;
-  padding: 1.07em 1.07em;
-}
-.cid-suWLzqlkgA .subtext {
-  border-top: 1px solid rgba(0, 0, 0, 0.5);
-}
-.cid-suWLzqlkgA .media-container-row {
-  -webkit-align-items: center;
-  align-items: center;
-}
-.cid-suWLzqlkgA .mbr-text {
+.cid-suXxhASwfl .mbr-section-subtitle {
   color: #767676;
 }
-.cid-suWLzqlkgA .form-block {
-  padding: 3rem;
-  position: relative;
-}
-.cid-suWLzqlkgA .form-block .bg {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #232323;
-  opacity: 1;
-  z-index: 0;
-}
-.cid-suWLzqlkgA .form-block .form-wrap {
-  position: relative;
-  z-index: 1;
-}
-.cid-suWLzqlkgA a:not([href]):not([tabindex]) {
+.cid-suXxhASwfl a:not([href]):not([tabindex]) {
   color: #fff;
   border-radius: 3px;
 }
-.cid-suWLzqlkgA .multi-horizontal {
-  flex-grow: 1;
-  -webkit-flex-grow: 1;
-  max-width: 100%;
+.cid-suXxhASwfl a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
 }
-.cid-suWLzqlkgA .input-group-btn {
-  display: block;
-  text-align: center;
+.cid-suXxhASwfl textarea.form-control {
+  min-height: 188px;
 }
-.cid-suWLzqlkgA textarea.form-control {
-  resize: none;
+.cid-suXxhASwfl H2 {
+  color: #ffffff;
 }
-@media (min-width: 768px) {
-  .cid-suWLzqlkgA .container > .row > .col-md-6:first-child {
-    padding-right: 30px;
-  }
-  .cid-suWLzqlkgA .container > .row > .col-md-6:last-child {
-    padding-left: 30px;
-  }
-}
-@media (max-width: 991px) {
-  .cid-suWLzqlkgA .google-map {
-    padding-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-suWLzqlkgA h2 {
-    padding-top: 2rem;
-  }
-}
-@media (max-width: 499px) {
-  .cid-suWLzqlkgA .block-content {
-    padding: 0;
-  }
-  .cid-suWLzqlkgA .form-block {
-    padding: 1rem;
-  }
+.cid-suXxhASwfl LABEL {
+  color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
   padding-top: 30px;
