--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
 
 
 
@@ -9,7 +10,7 @@ body {
   font-family: Rubik;
 }
 .display-1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Arvo', serif;
   font-size: 4.25rem;
   font-display: swap;
 }
@@ -1030,6 +1031,19 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .nav-link:hover,
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
+}
+.cid-sv3FjUcy7W {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/scene-1604442-1920-1920x1920.jpg");
+}
+.cid-sv3FjUcy7W H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sv3FjUcy7W H3 {
+  text-align: center;
+  color: #f9f295;
 }
 .cid-sqUAkoxhHQ .modal-body .close {
   background: #1b1b1b;
@@ -13438,17 +13452,6 @@ section.lazy-placeholder:after {
 .cid-spPQg4bJS7 .mbr-section-btn {
   color: #f7ed4a;
 }
-.cid-ssA3vOALsZ {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #232323;
-}
-.cid-ssA3vOALsZ P {
-  color: #767676;
-}
-.cid-ssA3vOALsZ H1 {
-  color: #ff7f9f;
-}
 .cid-spPRtVQl19 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -13644,8 +13647,63 @@ section.lazy-placeholder:after {
 .cid-sqUsLHhIhS .mbr-section-title {
   color: #ffffff;
 }
-.cid-sqTVFrksWB {
+.cid-sv3B0ZmlJl {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  position: relative;
+  background-color: #232323;
+}
+.cid-sv3B0ZmlJl .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-sv3B0ZmlJl .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-sv3B0ZmlJl .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-sv3B0ZmlJl .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-sv3B0ZmlJl .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-sv3B0ZmlJl .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-sv3B0ZmlJl .card .panel-body {
+  color: #767676;
+}
+.cid-sv3B0ZmlJl H2 {
+  color: #ffffff;
+}
+.cid-sv3B0ZmlJl H4 {
+  color: #ffffff;
+}
+.cid-sv3B0ZmlJl .panel-text {
+  color: #ffffff;
+}
+.cid-sv3ExD5hGh {
   padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sv3ExD5hGh P {
+  color: #767676;
+}
+.cid-sqTVFrksWB {
+  padding-top: 75px;
   padding-bottom: 0px;
   background-color: #232323;
 }
