Updated Minecraft page quick qna

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2559,6 +2559,61 @@ section.lazy-placeholder:after {
   padding-bottom: 45px;
   background-color: #232323;
 }
+.cid-svvVn1Td3N {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  position: relative;
+  background-color: #232323;
+}
+.cid-svvVn1Td3N .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-svvVn1Td3N .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-svvVn1Td3N .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-svvVn1Td3N .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-svvVn1Td3N .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-svvVn1Td3N .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-svvVn1Td3N .card .panel-body {
+  color: #767676;
+}
+.cid-svvVn1Td3N H2 {
+  color: #ffffff;
+}
+.cid-svvVn1Td3N H4 {
+  color: #ffffff;
+}
+.cid-svvVn1Td3N .panel-text {
+  color: #ffffff;
+}
+.cid-svvXTdLp3m {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #232323;
+}
+.cid-svvXTdLp3m P {
+  color: #767676;
+}
 .cid-srsmK4fuTS {
   padding-top: 0px;
   padding-bottom: 0px;
