Updated Crossplay Minecraft free trial link

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -15614,6 +15614,61 @@ section.lazy-placeholder:after {
 .cid-stT2Tt7cEn .card-img {
   color: #ffffff;
 }
+.cid-svFJb0hw0T {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  position: relative;
+  background-color: #232323;
+}
+.cid-svFJb0hw0T .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-svFJb0hw0T .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-svFJb0hw0T .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-svFJb0hw0T .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-svFJb0hw0T .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-svFJb0hw0T .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-svFJb0hw0T .card .panel-body {
+  color: #767676;
+}
+.cid-svFJb0hw0T H2 {
+  color: #ffffff;
+}
+.cid-svFJb0hw0T H4 {
+  color: #ffffff;
+}
+.cid-svFJb0hw0T .panel-text {
+  color: #ffffff;
+}
+.cid-svFKZclxlX {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-svFKZclxlX P {
+  color: #767676;
+}
 .cid-stVw2d3jcB {
   padding-top: 15px;
   padding-bottom: 0px;
