--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -17163,7 +17163,7 @@ section.lazy-placeholder:after {
 }
 .cid-suaA3uLuKi {
   padding-top: 135px;
-  padding-bottom: 30px;
+  padding-bottom: 135px;
   background-color: #232323;
 }
 .cid-suaA3uLuKi P {
@@ -18215,6 +18215,28 @@ section.lazy-placeholder:after {
   }
 }
 .cid-svFQcWJevw H2 {
+  color: #ffffff;
+}
+.cid-swfB1aJpmY {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-color: #232323;
+}
+.cid-swfB1aJpmY .mbr-text {
+  color: #ffffff;
+}
+.cid-swfB1aJpmY h4 {
+  text-align: center;
+}
+.cid-swfB1aJpmY p {
+  text-align: center;
+}
+.cid-swfB1aJpmY .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
+.cid-swfB1aJpmY .card-title,
+.cid-swfB1aJpmY .card-img {
   color: #ffffff;
 }
 .cid-sqdiFAFmX0 {
