Updated Terms of Service

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2110,6 +2110,14 @@ section.lazy-placeholder:after {
 .cid-sqUstfTisk .mbr-section-title {
   color: #ffffff;
 }
+.cid-sx3u356HZO {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sx3u356HZO P {
+  color: #767676;
+}
 .cid-srsmu1mMYD {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -7260,6 +7268,14 @@ section.lazy-placeholder:after {
 }
 .cid-sqUsVpuGQu .mbr-section-title {
   color: #ffffff;
+}
+.cid-sx3udlAOEf {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sx3udlAOEf P {
+  color: #767676;
 }
 .cid-srslsGIvki {
   padding-top: 0px;
